# codelab

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  vcpkg.json
backend/: CMakeLists.txt
backend/db/: schema.sql
backend/include/api/: routes.h
backend/include/core/: config.h  db.h
backend/include/dao/: directory_dao.h  pull_request_dao.h  repository_dao.h  ssh_key_dao.h  user_dao.h
backend/include/git/: git_storage.h  git_viewer.h
backend/include/middleware/: auth_middleware.h
backend/include/models/: directory.h  file_entry.h  git.h  pull_request.h  respository.h  user.h
backend/include/services/: auth_service.h  git_http_service.h  repo_service.h  ssh_service.h
backend/src/: main.cc
backend/src/api/: routes.cc
backend/src/core/: config.cc  db.cc
backend/src/dao/: directory_dao.cc  pull_request_dao.cc  repository_dao.cc  ssh_key_dao.cc  user_dao.cc
backend/src/git/: git_storage.cc  git_viewer.cc
backend/src/services/: auth_service.cc  git_http_service.cc  repo_service.cc  ssh_service.cc
backend/src/shell/: main.cc
backend/tests/: CMakeLists.txt  api_tests.cc  auth_tests.cc  dao_tests.cc  git_http_tests.cc  git_tests.cc  service_tests.cc  test_database.h  test_main.cc
frontend/: nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: app.config.ts  app.vue
frontend/app/components/: BranchManagerModal.vue  CollaboratorManagerModal.vue  PullRequestDiffViewer.vue  PullRequestManagerModal.vue  RepositoryView.vue
frontend/app/composables/: useApi.ts  useAuth.ts
frontend/app/layouts/: blank.vue  default.vue
frontend/app/middleware/: auth.ts  authenticated.ts  guest.ts  unauthenticated.ts
frontend/app/pages/: [...slug].vue  [repo].vue  dashboard.vue  index.vue  login.vue  new.vue  register.vue  settings.vue
frontend/app/pages/settings/: keys.vue
frontend/app/pages/u/[username]/: [...slug].vue
frontend/middleware/: auth.ts
frontend/types/: models.ts
